...
        android:layout_width="309dp"
        android:layout_height="457dp"
        android:layout_margin="20dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:background="#E42E6B"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
...

    <Button
        android:id="@+id/done"
        android:layout_width="101dp"
        android:layout_height="56dp"
        android:layout_marginBottom="15dp"
        android:text="DONE"
        android:textColor="#161616"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toTopOf="@+id/img3" />

    <RadioGroup
        android:id="@+id/loopGroup"
        android:layout_width="219dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/RouteTitle">

        <RadioButton
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="Out and Back   OR  "
            android:textColor="#FFFFFF" />

...
            android:buttonTint="#FFFFFF"
            android:text="Loop"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/flatGroup"
        android:layout_width="219dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/loopGroup">

        <RadioButton
            android:id="@+id/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="Flat   OR  "
            android:textColor="#FFFFFF" />

...
            android:buttonTint="#FFFFFF"
            android:text="Hilly"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/streetGroup"
        android:layout_width="219dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/flatGroup">

        <RadioButton
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="Street   OR  "
            android:textColor="#FFFFFF" />

...
            android:buttonTint="#FFFFFF"
            android:text="Trail"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/evenGroup"
        android:layout_width="286dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/streetGroup">

        <RadioButton
            android:id="@+id/even"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="Even Surface   OR  "
            android:textColor="#FFFFFF" />

...
            android:buttonTint="#FFFFFF"
            android:text="Uneven Surface"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/difficultyGroup"
        android:layout_width="286dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/evenGroup">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:text="Easy"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
