...
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="44dp"
        android:text="Routes"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startRouteButton" />

    <Button
        android:id="@+id/startRouteButton"
        android:layout_width="104dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
...
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailyStepsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="85dp"
        android:text="0"
...
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mileageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="85dp"
        android:text="0"
...
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img2"
        app:layout_constraintEnd_toEndOf="@+id/img2" />

    <Switch
        android:id="@+id/debugMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="7dp"
        android:text="debug"
        android:textColor="#FFFFFF"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintStart_toStartOf="@+id/img" />

    <Button
        android:id="@+id/AddStep_debug"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:text="+ 500 Steps"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/img"
        app:layout_constraintEnd_toEndOf="@+id/img" />

    <Button
        android:id="@+id/ClearDataBase_debug"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginEnd="7dp"
        android:text="Clear Data"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/AddStep_debug"
...
