...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartAWalkActivity">

    <Switch
        android:id="@+id/debugMode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:text="debug "
        android:textColor="#272727"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
...
        app:layout_anchorGravity="end|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"
...
        android:text="Walk Name:"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInfo2" />

    <Button
        android:id="@+id/save_SAW"
        android:layout_width="118dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:text="START"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
...
        android:text="StartTime: "
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/debugMode2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/input"
        android:layout_width="95dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:textSize="9dp"
        android:maxLines="1"
...
