...
        android:layout_height="403dp"
        android:layout_margin="20dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="10dp"
        android:background="#7546C9"
        app:layout_constraintBottom_toTopOf="@+id/WSAstopWalk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
...

    <Button
        android:id="@+id/WSAstopWalk"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginBottom="30dp"
        android:text="STOP WALK"
        android:textColor="#161616"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
        android:textSize="13dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/RouteTitle" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="65dp"
        android:text="debug"
        android:textColor="#FFFFFF"
...
        android:textSize="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/img3"
        app:layout_constraintStart_toStartOf="@+id/img3"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginStart="5dp"
        android:textSize="10dp"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@+id/textView12"
...
